--- a/exampleapp/build.gradle
+++ b/exampleapp/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "top.itmp.example"
+        applicationId "top.itmp.exampleapp"
         minSdkVersion 9
         targetSdkVersion 23
         versionCode 1
@@ -21,6 +21,6 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    testCompile 'junit:junit:4.12'
     compile 'com.android.support:appcompat-v7:23.3.0'
+    compile project(':rtbox')
 }
