--- a/exampleapp/src/main/AndroidManifest.xml
+++ b/exampleapp/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="top.itmp.example">
+    package="top.itmp.exampleapp">
 
     <application
         android:allowBackup="true"
