--- a/exampleapp/build.gradle
+++ b/exampleapp/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion "23.0.3"
 
     defaultConfig {
-        applicationId "top.itmp.exampleapp"
+        applicationId "top.itmp.rtbox.example"
         minSdkVersion 9
         targetSdkVersion 23
         versionCode 1
