add upload bintray support

--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,14 @@ allprojects {
     }
 }
 
+ext {
+    minSdkVersion = 9
+    compileSdkVersion = 23
+    buildToolsVersion = '23.0.3'
+    sourceCompatibility = JavaVersion.VERSION_1_7
+}
+
+
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
