--- a/settings.gradle
+++ b/settings.gradle
@@ -1,1 +1,27 @@
 include ':rtbox_example', ':rtbox'
+
+gradle.ext.versionCode = 1
+gradle.ext.versionName = '0.1'
+
+gradle.ext.rtName = "rtbox"
+gradle.ext.id = 'leehz'
+gradle.ext.name = "Yu Law"
+gradle.ext.description = "A Root Box For Android Development"
+gradle.ext.inceptionYear = "2016"
+gradle.ext.packaging = "aar"
+
+gradle.ext.org = "itmp"
+gradle.ext.repo = 'top'
+gradle.ext.pkgName = 'top.itmp.rtbox'
+gradle.ext.group = 'top.itmp.rtbox'
+gradle.ext.labels = "['rtbox, 'rootbox']"
+gradle.ext.url = 'https://github.com/itmplog/rtbox'
+gradle.ext.gitUrl = 'https://github.com/itmplog/rtbox.git'
+gradle.ext.licenseName = 'The Apache Software License, Version 2.0'
+gradle.ext.licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+
+gradle.ext.minSdkVersion = 9
+gradle.ext.compileSdkVersion = 23
+gradle.ext.buildToolsVersion = '23.0.3'
+gradle.ext.supportLibraryVersion = '23.3.0'
+gradle.ext.javaVersion = JavaVersion.VERSION_1_7
