--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
+# Disabling sudo moves build to the Container Based Infrastructure on Travis CI
+sudo: false
+
 language: android
+jdk: oraclejdk8
 android:
   components:
     # Uncomment the lines below if you want to
@@ -16,12 +20,16 @@ android:
     - extra-google-google_play_services
     - extra-google-m2repository
     - extra-android-m2repository
+	- extra-android-support
 
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
     - sys-img-armeabi-v7a-android-23
     - sys-img-x86-android-23
 
+os:
+	- linux
+	- osx
 
 before_script:  
     - echo no | android create avd --force -n test -t android-23 --abi armeabi-v7a
@@ -29,5 +37,13 @@ before_script:
     - android-wait-for-emulator
     - adb shell input keyevent 82 &
 
-script: ./gradlew build connectedCheck
+script: ./gradlew clean build connectedCheck -PdisablePreDex
+
+notifications:
+  email: false
+
+cache:
+  directories:
+    - $HOME/.m2
+    - $HOME/.gradle
 
