--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ android:
     - extra-google-google_play_services
     - extra-google-m2repository
     - extra-android-m2repository
-	- extra-android-support
+    - extra-android-support
 
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
@@ -28,8 +28,8 @@ android:
     - sys-img-x86-android-23
 
 os:
-	- linux
-	- osx
+    #	- linux
+    - osx
 
 before_script:  
     - echo no | android create avd --force -n test -t android-23 --abi armeabi-v7a
