--- a/circle.yml
+++ b/circle.yml
@@ -19,7 +19,7 @@ dependencies:
         - echo y | android update sdk --no-ui --all --filter "extra-google-google_play_services"
         - echo y | android update sdk --no-ui --all --filter "sys-img-armeabi-v7a-android-23"
         #- echo y | android update sdk --no-ui --all --filter "sys-img-x86-android-23"
-        - ./gradle dependencies
+        - ./gradlew dependencies
 
 test:
     override:
