--- a/circle.yml
+++ b/circle.yml
@@ -17,15 +17,19 @@ dependencies:
         - echo y | android update sdk --no-ui --all --filter "extra-android-support"
         - echo y | android update sdk --no-ui --all --filter "extra-google-m2repository"
         - echo y | android update sdk --no-ui --all --filter "extra-google-google_play_services"
-        - echo y | android update sdk --no-ui --all --filter "sys-img-armeabi-v7a-android-23"
+        #- echo y | android update sdk --no-ui --all --filter "sys-img-armeabi-v7a-android-23"
         #- echo y | android update sdk --no-ui --all --filter "sys-img-x86-android-23"
         - ./gradlew dependencies
 
 test:
     override:
-        - echo no | android create avd --force -n test -t android-23 --abi armeabi-v7a
-        - emulator -avd test -no-skin -no-audio -no-window &
-        - adb wait-for-device
-        - adb shell input keyevent 82 &
+        - emulator -avd circleci-android22 -no-audio -no-window:
+            background: true
+            parallel: true
+        - circle-android wait-for-boot
+          #- echo no | android create avd --force -n test -t android-23 --abi armeabi-v7a
+          #- emulator -avd test -no-skin -no-audio -no-window &
+          #- adb wait-for-device
+          #- adb shell input keyevent 82 &
         - ./gradlew clean build connectedCheck
         - cp -r rtbox/build/outputs $CIRCLE_ARTIFACTS
