--- a/rtbox/build.gradle
+++ b/rtbox/build.gradle
@@ -110,6 +110,11 @@ task generateSourcesJar(type: Jar) {
 task generateJavadocs(type: Javadoc) {
     source = android.sourceSets.main.java.srcDirs
     classpath += project.files(android.getBootClasspath().join(File.pathSeparator))
+    options {
+        encoding "utf-8"
+    }
+    //exclude '**/BuildConfig.java'
+    //exclude '**/R.java'
 }
 
 task generateJavadocsJar(type: Jar, dependsOn: generateJavadocs) {
