--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ sudo: false
 
 language: android
 jdk: 
-    - oraclejdk7
+    #- oraclejdk7
     - oraclejdk8
 android:
   components:
@@ -38,6 +38,11 @@ before_script:
     - emulator -avd test -no-skin -no-audio -no-window &
     - android-wait-for-emulator
     - adb shell input keyevent 82 &
+    - wget -q http://dl.google.com/android/repository/android-ndk-r11c-linux-x86_64.zip
+    - unzip -qq android-ndk-r11c-linux-x86_64.zip
+    - mv android-ndk-r11c $HOME
+    - export ANDROID_NDK_HOME=$HOME/android-ndk-r11c"
+    - export PATH="$PATH:$ANDROID_NDK_HOME"
 
 script: ./gradlew clean build connectedCheck -PdisablePreDex
 
@@ -48,4 +53,5 @@ cache:
   directories:
     - $HOME/.m2
     - $HOME/.gradle
+    - $HOME/android-ndk-r11c
 
