--- a/.travis.yml
+++ b/.travis.yml
@@ -32,17 +32,17 @@ android:
 os:
     - linux
     #- osx
+    #
+before_install:
+    - git clone https://github.com/urho3d/android-ndk.git $HOME/android-ndk-root
+    - export ANDROID_NDK_HOME=$HOME/android-ndk-root
+    - export PATH="$PATH:$ANDROID_NDK_HOME"
 
 before_script:  
     - echo no | android create avd --force -n test -t android-23 --abi armeabi-v7a
     - emulator -avd test -no-skin -no-audio -no-window &
     - android-wait-for-emulator
     - adb shell input keyevent 82 &
-    - wget -q http://dl.google.com/android/repository/android-ndk-r11c-linux-x86_64.zip
-    - unzip -qq android-ndk-r11c-linux-x86_64.zip
-    - mv android-ndk-r11c $HOME
-    - export ANDROID_NDK_HOME=$HOME/android-ndk-r11c"
-    - export PATH="$PATH:$ANDROID_NDK_HOME"
 
 script: ./gradlew clean build connectedCheck -PdisablePreDex
 
