--- a/.travis.yml
+++ b/.travis.yml
@@ -26,23 +26,23 @@ android:
 
     # Specify at least one system image,
     # if you need to run emulator(s) during your tests
-    - sys-img-armeabi-v7a-android-23
-    - sys-img-x86-android-23
+    #- sys-img-armeabi-v7a-android-23
+    #- sys-img-x86-android-23
 
 os:
     - linux
     #- osx
     #
 before_install:
-    - git clone https://github.com/urho3d/android-ndk.git $HOME/android-ndk-root
+    - git clone --depth=1 https://github.com/urho3d/android-ndk.git $HOME/android-ndk-root
     - export ANDROID_NDK_HOME=$HOME/android-ndk-root
     - export PATH="$PATH:$ANDROID_NDK_HOME"
 
 before_script:  
-    - echo no | android create avd --force -n test -t android-23 --abi armeabi-v7a
-    - emulator -avd test -no-skin -no-audio -no-window &
-    - android-wait-for-emulator
-    - adb shell input keyevent 82 &
+    #- echo no | android create avd --force -n test -t android-23 --abi armeabi-v7a
+    #- emulator -avd test -no-skin -no-audio -no-window &
+    #- android-wait-for-emulator
+    #- adb shell input keyevent 82 &
 
 script: ./gradlew clean build connectedCheck -PdisablePreDex
 
