--- a/circle.yml
+++ b/circle.yml
@@ -4,6 +4,8 @@ machine:
         version: openjdk8
     environment:
         ANDROID_HOME: /usr/local/android-sdk-linux
+        ANDROID_NDK_HOME: $HOME/android-ndk-root
+        PATH: "$PATH:$ANDROID_NDK_HOME"
 
 ## dependencies
 dependencies:
@@ -19,7 +21,9 @@ dependencies:
         - echo y | android update sdk --no-ui --all --filter "extra-google-google_play_services"
         #- echo y | android update sdk --no-ui --all --filter "sys-img-armeabi-v7a-android-23"
         #- echo y | android update sdk --no-ui --all --filter "sys-img-x86-android-23"
-        - export PATH="$PATH:$ANDROID_NDK"
+        - git clone --depth=1 https://github.com/urho3d/android-ndk.git $HOME/android-ndk-root
+        - export ANDROID_NDK_HOME=$HOME/android-ndk-root
+        - export PATH="$PATH:$ANDROID_NDK_HOME"
         - ./gradlew dependencies
 
 test:
