--- a/appveyor.yml
+++ b/appveyor.yml
@@ -6,7 +6,8 @@ init:
   - 7z x android-sdk_r24.3.4-windows.zip > nul
   - appveyor DownloadFile http://dl.google.com/android/ndk/android-ndk-r10e-windows-x86_64.exe
   - android-ndk-r10e-windows-x86_64.exe > nul
-  - cd c:\projects\android-ndk
+  - cd c:\projects\rtbox
+  - set path=%path%;c:\android-ndk-r10e
 environment:
   ANDROID_NDK_HOME: C:\android-ndk-r10e
   ANDROID_HOME: C:\android-sdk-windows
