--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 # Disabling sudo moves build to the Container Based Infrastructure on Travis CI
-sudo: false
+sudo: required
 
 language: android
 jdk: 
@@ -38,7 +38,8 @@ before_install:
     - export ANDROID_NDK_HOME=$HOME/android-ndk-root
     - export PATH="$PATH:$ANDROID_NDK_HOME"
 
-before_script:  
+before_script:
+    - sudo -s pip install coverage
     #- echo no | android create avd --force -n test -t android-23 --abi armeabi-v7a
     #- emulator -avd test -no-skin -no-audio -no-window &
     #- android-wait-for-emulator
